# multi-tenant-rag-assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: audit.py  auth.py  config.py  db.py  embeddings.py  guardrails.py  ingest.py  main.py  pii.py  rag.py  retrieval.py  rooms.py
data/kb/: account-and-login.md  billing-and-refunds.md  workspaces-and-members.md
data/pii/: customer_profiles.json  orders.json  tickets.json
db/: init.sql
docs/: backlog.md  decisions.md  devlog.md  roadmap.md
eval/: gate.py  golden.json  run.py
guardrails/: scanners.yml
migrations/: env.py
migrations/versions/: 0001_documents_and_chunks.py  0002_rooms_membership_rls.py  0003_fix_membership_self_enrol.py  0004_pii_records_and_audit_log.py
multi_tenant_rag_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_chunking.py  test_guardrails.py  test_health.py  test_isolation.py
