[project]
name = "multi-tenant-rag-assistant"
version = "0.0.0"
description = "Multi-tenant RAG assistant over private data"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "anthropic>=0.49",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "pgvector>=0.3",
    "sentence-transformers>=3.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
